# SLogLib

./: .gitignore  Aarch64Toolchain  Build_Aarch64.sh  Build_x64.bat  Build_x64.sh  CHANGELOG  CMakeLists.txt  LICENSE  README.md  linux_test_cmake.sh
Contrib/: Contrib.txt
Contrib/QWidgetLogger/: QWidgetLogger.cpp  QWidgetLogger.h
Doc/: SLogLibArchitecture.docx
Examples/: CMakeLists.txt
Examples/LoggingDemo/: CMakeLists.txt  LoggingDemo.cpp
Examples/QWidgetLoggerDemo/: CMakeLists.txt  Main.cpp  QWidgetLogger.cpp  QWidgetLogger.h
SLogLib/: AddToCallStack.cpp  AddToCallStack.h  CMakeLists.txt  CallInfo.h  Config.h  DisableCopy.h  DisableCopyMove.h  LoggingManager.cpp  LoggingManager.h  Message.h  SLogLib  SLogLib.cpp  SLogLib.h  SysUtils.cpp  SysUtils.h  SysUtils_ios.h  Types.cpp  Types.h  Version.h.in
SLogLib/Devices/: AbstractLoggingDevice.cpp  AbstractLoggingDevice.h  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  MemoryLogger.cpp  MemoryLogger.h
SLogLib/Formatters/: AbstractFormatter.h  DetailedFormatter.h  ErrorFormatter.h  FullFormatter.h  HtmlFormatter.h  InfoFormatter.h  NullFormatter.h
SLogLib/Platform/: version.rc  version.rc.in
Tests/: Main.cpp
